--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,4 +1,4 @@
-.main {
+.home {
     width: 100%;
     height: 100%;
     background-image: url('../img/mainImage.jpg');
@@ -7,12 +7,47 @@
     background-position: top;
 }
 
-/*.main::before {
+.main {
+    height: 100%;
+    width: 100%;
+    padding-top: 56px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.navBar-main {
+    background-color: black !important;
+}
+
+.main-banner {
+    height: 90%;
+    width: 85%;
+    background-image: url('../img/mainIcon.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    position: absolute;
+}
+
+.home::before {
     content: "";
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: rgba(0, 0, 0, 0.9);
     position: absolute;
     top: 0;
     bottom: 0;
     left: 0;
     right: 0;
-}*/
+}
+
+@media (min-width: 576px) { 
+    .main-banner {
+        width: 60%;
+    }
+  }
+
+  @media (min-width: 1200px) { 
+    .main-banner {
+        width: 50%;
+    }
+  }
