--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,4 +1,9 @@
-.home {
+html, body {
+    background-color: black;
+    font-family: 'Roboto', sans-serif ;
+}
+
+/*.home {
     width: 100%;
     height: 100%;
     background-image: url('../img/mainImage.jpg');
@@ -14,13 +19,19 @@
     display: flex;
     justify-content: center;
     align-items: center;
-}
+}*/
 
-.navBar-main {
+.main-navBar {
     background-color: black !important;
+    padding-left: 16px;
+    padding-right: 16px;
 }
 
-.main-banner {
+.navBar-brand {
+    font-size: 0.8rem;
+}
+
+/*.main-banner {
     height: 90%;
     width: 85%;
     background-image: url('../img/mainIcon.png');
@@ -50,4 +61,23 @@
     .main-banner {
         width: 50%;
     }
-  }
+  }*/
+
+@media (min-width: 576px) { }
+
+/*Medium devices (tablets, 768px and up)*/
+@media (min-width: 768px) { }
+
+/*Large devices (desktops, 992px and up)*/
+@media (min-width: 992px) { 
+    .navbar-nav {
+        width: 100%;
+        justify-content: flex-end;
+    }
+}
+
+/*X-Large devices (large desktops, 1200px and up)*/
+@media (min-width: 1200px) { }
+
+/*XX-Large devices (larger desktops, 1400px and up)*/
+@media (min-width: 1400px) { }
