--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,6 +1,7 @@
 html, body {
     background-color: black;
     font-family: 'Roboto', sans-serif ;
+    color: white;
 }
 
 main {
@@ -11,7 +12,7 @@ main {
 
 main::before {
     content: "";
-    background-color: rgba(0, 0, 0, 0.9);
+    background-color: rgba(0, 0, 0, 0.8);
     position: absolute;
     top: 0;
     bottom: 0;
@@ -45,19 +46,49 @@ main::before {
     font-size: 1rem;
 }
 
-.main-logo {
+.main-items {
     width: 90%;
-    height: 50vh;
-    background-image: url('../img/mainIcon.png');
     position: absolute;
 }
 
-@media (min-width: 576px) { }
+.main-logo {
+    width: 100%;
+    height: 100px;
+    background-image: url('../img/mainIcon.png');
+}
+
+.main-icons {
+    width: 100%;
+    height: 80px;
+    color: #798088;
+}
+
+.link-icon {
+    color: #798088;
+    text-decoration: none;
+    margin-left: 8px;
+    margin-right: 8px;
+}
+
+.link-icon:hover {
+    color: #0B67AA;
+    transform: scale(1.3);
+}
+
+@media (min-width: 576px) { 
+    .main-logo {
+        height: 150px;
+    }
+}
 
 /*Medium devices (tablets, 768px and up)*/
 @media (min-width: 768px) {
-    .main-logo {
+    .main-items {
         width: 80%;
+    }
+
+    .main-logo {
+        height: 170px;
     }
  }
 
@@ -68,14 +99,18 @@ main::before {
         justify-content: flex-end;
     }
 
-    .main-logo {
+    .main-items {
         width: 70%;
+    }
+
+    .main-logo {
+        height: 220px;
     }
 }
 
 /*X-Large devices (large desktops, 1200px and up)*/
 @media (min-width: 1200px) { 
-    .main-logo {
+    .main-items {
         width: 50%;
     }
 }
