--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -20,6 +20,20 @@ main::before {
     right: 0;
 }
 
+/**TITLES**/
+h1 {
+    font-size: 2em;
+    font-family: 'Roboto', sans-serif ;
+    font-weight: bold;
+    margin-top: 40px;
+    margin-bottom: 8px;
+}
+
+.title-pre {
+    color: #0B67AA;
+}
+/**END-TITLES**/
+
 /**GENERICS**/
 .bg-image {
     background-repeat: no-repeat;
@@ -78,6 +92,45 @@ main::before {
 
 }
 
+.section-primary {
+    width: 100%;
+    background-color: whitesmoke;
+    color: black;
+    min-height: 500px;
+}
+
+.card-primary {
+    background-color: black;
+    color: #798088;
+}
+
+.card-primary:hover {
+    transform: scale(1.05);
+}
+
+.card-header {
+    height: 120px;   
+    background-color: white;
+}
+
+.card-header::before {
+    content: "";
+    background-color: rgba(0, 0, 0, 0.7);
+    position: absolute;
+    top: 0;    
+    left: 0;
+    right: 0;
+    height: 120px;
+}
+
+.card-primary-title {
+    color:#0B67AA;
+    margin-bottom: 16px;
+}
+
+.card-shadow {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
 /**END-GENERICS**/
 
 .main-navBar {
@@ -129,6 +182,18 @@ main::before {
 .link-icon:hover {
     color: #0B67AA;
     transform: scale(1.3);
+}
+
+.section-crypto {
+    background-image: url('../img/blockchain.jpg');
+}
+
+.section-mobile {
+    background-image: url('../img/mobile.jpg');
+}
+
+.section-webapp {
+    background-image: url('../img/webapp.jpg');
 }
 
 @media (min-width: 576px) { 
