--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -2,3 +2,9 @@
     font-family: 'Roboto';
     src: url('../fonts/Roboto-Regular.ttf');
 }
+
+@font-face {
+    font-family: 'Roboto';
+    font-weight: bold;
+    src: url('../fonts/Roboto-Medium.ttf');
+}
