UPDATE: Adjust style

--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -1,5 +1,6 @@
 .main-navBar {
     width: 100%;
+    height: 80px;
     background-color: black !important;
     padding-left: 16px;
     padding-right: 16px;
