--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -7,7 +7,7 @@ main {
 main::before {
     content: "";
     background-color: rgba(0, 0, 0, 0.8);
-    position: absolute;
+    position: fixed;
     top: 0;
     bottom: 0;
     left: 0;
@@ -104,5 +104,11 @@ main::before {
 
     .main-links {
         margin-top: 64px;
+    }
+}
+
+@media (max-height: 576px) {
+    main {
+        margin-top: 80px;
     }
 }
