--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -7,7 +7,7 @@ main {
 main::before {
     content: "";
     background-color: rgba(0, 0, 0, 0.9);
-    position: fixed;
+    position: absolute;
     top: 0;
     bottom: 0;
     left: 0;
